# hwloc-xml-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build.image.yml  set-vars.yml  test.yml
docker/: dockerfile
docs/: .gitignore
docs/source/: conf.py  index.rst  tests.rst
hwloc_xml_parser/: __init__.py  topology.py
tests/: test_topology.py
tests/data/: dual-intel-xeon-gold-6126.xml  mediatek-dimensity-9300+.xml  nvidia-gh-200.xml  single-apple-m2.xml  single-intel-core-i7-4790.xml  single-nvidia-jetson-xavier-agx.xml
